fix newsfeed spacing and font size issue

--- a/blocks/newslist/newslist.css
+++ b/blocks/newslist/newslist.css
@@ -27,7 +27,7 @@
 
 .newslist .newslist-container .newslist-item h4 a {
   font-family: var(--graphik-semibold);
-  font-size: var(--body-font-size-s);
+  font-size: 18px;
   font-weight: 600;
   color: #000;
   margin-bottom: 13px;
@@ -36,13 +36,38 @@
   margin-right: auto;
 }
 
+@media (min-width: 1000px) {
+  .newslist .newslist-container .newslist-item h4 a {
+    font-size: 20px;
+  }
+}
+
 .newslist .newslist-container .newslist-item .newslist-item-description {
   font-family: var(--header-font-family);
   font-size: var(--body-font-size-xxs);
   color: #000;
-  margin-bottom: 20px;
   padding: 0 0 20px;
-  line-height: 1.83;
+  line-height: 1.6;
+}
+
+.newslist .newslist-container .newslist-item .newslist-item-description p {
+  margin-bottom: 0;
+}
+
+@media (min-width: 767px) {
+  .newslist .newslist-container .newslist-item .newslist-item-description {
+    margin-bottom: 20px;
+  }
+
+  .newslist .newslist-container .newslist-item .newslist-item-description p {
+    margin-bottom: 1em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .newslist .newslist-container .newslist-item .newslist-item-description {
+  font-size: var(--body-font-size-xs);
+  }
 }
 
 .newslist .newslist-container .newslist-item .newslist-item-footer a {
